fix button under invisible text

--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ a:visited {
       forwards;
 }
 
-#intro-texts.start + #play-button {
+#intro-texts.start ~ #play-button {
   animation: fadein var(--fade-time) calc(3 * var(--total-time)) both;
 }
 
